[gd_scene load_steps=7 format=3 uid="uid://cdrt0fpl2gi5f"]

[ext_resource type="Script" uid="uid://saicthmx7j5u" path="res://scenes/player/Player.gd" id="1_dovo2"]
[ext_resource type="Texture2D" uid="uid://b5c6m1evv44ef" path="res://Scream_Jam_2025_Art/Player/playersprite.png" id="2_dovo2"]
[ext_resource type="PackedScene" uid="uid://btrmqghaekm2n" path="res://scenes/pistol.tscn" id="3_gmlin"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dovo2"]
radius = 5.0
height = 60.0

[sub_resource type="SpriteFrames" id="SpriteFrames_p47bc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dovo2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gmlin"]
radius = 13.0
height = 58.0

[node name="player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_dovo2")
speed = 150

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("CapsuleShape2D_dovo2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
texture_repeat = 1
position = Vector2(-1, -1)
sprite_frames = SubResource("SpriteFrames_p47bc")

[node name="dash_cooldown" type="Timer" parent="."]
wait_time = 2.0

[node name="shooting_cooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="pistol" parent="." instance=ExtResource("3_gmlin")]
position = Vector2(-2, -11)

[node name="damage_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_area"]
shape = SubResource("CapsuleShape2D_gmlin")

[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="shooting_cooldown" to="." method="_on_shooting_cooldown_timeout"]
[connection signal="area_entered" from="damage_area" to="." method="_on_damage_area_area_entered"]
[connection signal="area_exited" from="damage_area" to="." method="_on_damage_area_area_exited"]
